syntax = "proto3";

package proto;

service BlogService {
    rpc Register(RegisterRequest) returns (RegisteredUser);
    rpc Login(LoginRequest) returns (RegisteredUser);
    rpc CreatePost(CreatePostRequest) returns (PostInfo);
    rpc GetPost(PostId) returns (PostInfo);
    rpc UpdatePost(UpdatePostRequest) returns (PostInfo);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
    rpc GetPosts(GetPostsReq) returns (GetPostsResponse);
}

message AuthUser {
    String username = 1;
    String email = 2;
    int64 id = 3;
}

message NewPost {
    String title = 1;
    String content = 2;
}

message RegisterRequest {
    String username = 1;
    String email = 2;
    String password = 3;
}

message RegisteredUser {
    String token = 1;
}

message LoginRequest {
    String username = 1;
    String password = 2;
}

message PostId {
    int64 id = 1;
}

message PostInfo {
    String title = 1;
    String content = 2;
    int64 author_id = 3;
    String created_at = 4;
    String updated_at = 5;
}

message CreatePostRequest {
    AuthUser auth_user = 1;
    NewPost new_post = 2;
}

message UpdatePostRequest {
    AuthUser auth_user = 1;
    NewPost new_post = 2;
    PostId post_id = 3;
}

message DeletePostRequest {
    AuthUser auth_user = 1;
    PostId post_id = 2;
}

message DeletePostResponse {}

message GetPostsReq {
    int64 offset = 1 [default = 0];
    int64 limit = 2 [default = 10];
}

message GetPostsResponse {
    int64 offset = 1;
    int64 limit = 2;
    repeated PostInfo = 3;
}